--- a/TelloTest/Base.lproj/Main.storyboard
+++ b/TelloTest/Base.lproj/Main.storyboard
@@ -35,16 +35,16 @@
                                 </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="2Ts-gM-bOo">
-                                <rect key="frame" x="14" y="391" width="347" height="31"/>
+                                <rect key="frame" x="68" y="391" width="293" height="31"/>
                                 <connections>
                                     <action selector="changeAltSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Oky-AM-dgy"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pd1-RS-63x">
-                                <rect key="frame" x="87" y="511" width="200" height="50"/>
+                                <rect key="frame" x="87.666666666666686" y="511" width="200" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="6Bh-kd-e21"/>
-                                    <constraint firstAttribute="width" constant="200" id="DLJ-03-b2O"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="DLJ-03-b2O"/>
                                 </constraints>
                                 <state key="normal" title="Send value to Tello" backgroundImage="button_bigP.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -54,17 +54,17 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Altitude Limit: --m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="aEx-MM-yEq">
-                                <rect key="frame" x="53" y="99" width="270" height="80"/>
+                                <rect key="frame" x="52.666666666666657" y="99" width="270" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="6hv-fz-04g"/>
-                                    <constraint firstAttribute="width" constant="270" id="W5N-9F-ZZT"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="270" id="W5N-9F-ZZT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXV-va-NSx">
-                                <rect key="frame" x="37.666666666666657" y="209" width="300" height="80"/>
+                                <rect key="frame" x="37.666666666666657" y="199" width="300" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="Vmd-9c-pXJ"/>
                                     <constraint firstAttribute="width" constant="300" id="WVX-Ud-tJS"/>
@@ -77,9 +77,9 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c2R-kw-LZc">
-                                <rect key="frame" x="87" y="441" width="200" height="41"/>
+                                <rect key="frame" x="87.666666666666686" y="441" width="200" height="41"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="d4H-Pb-neV"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="d4H-Pb-neV"/>
                                     <constraint firstAttribute="height" constant="40" id="zDE-dT-aSj"/>
                                 </constraints>
                                 <segments>
@@ -90,16 +90,6 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                                     <action selector="changeUnitType:" destination="BYZ-38-t0r" eventType="valueChanged" id="3dg-Am-VBM"/>
                                 </connections>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-- m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPo-j0-dWV">
-                                <rect key="frame" x="87.666666666666686" y="326" width="200" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="Ujc-89-fO9"/>
-                                    <constraint firstAttribute="height" constant="30" id="bZo-i0-zBX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Dv-Vk-jBp">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.46666666666666667" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -126,31 +116,40 @@ And, please kill the Tello app.</string>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24G-22-zs0">
+                                <rect key="frame" x="62.666666666666657" y="703" width="249.99999999999997" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="ZOo-kD-tPT"/>
+                                    <constraint firstAttribute="height" constant="30" id="sYK-56-7oi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="LKp-Yt-PcO">
-                                <rect key="frame" x="62" y="738" width="250" height="30"/>
+                                <rect key="frame" x="187.66666666666666" y="738" width="0.0" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="gC6-H5-Ub8"/>
-                                    <constraint firstAttribute="width" constant="250" id="tAZ-dI-Ld5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="qcq-nn-yqr">
-                                <rect key="frame" x="63" y="668" width="250" height="30"/>
+                                <rect key="frame" x="62.666666666666657" y="668" width="249.99999999999997" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2d9-p6-ZC8"/>
-                                    <constraint firstAttribute="width" constant="250" id="bVu-B2-uzq"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="bVu-B2-uzq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24G-22-zs0">
-                                <rect key="frame" x="62.666666666666657" y="703" width="249.99999999999997" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-- m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="LPo-j0-dWV">
+                                <rect key="frame" x="8" y="391" width="60" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="ZOo-kD-tPT"/>
-                                    <constraint firstAttribute="height" constant="30" id="sYK-56-7oi"/>
+                                    <constraint firstAttribute="width" constant="60" id="Ujc-89-fO9"/>
+                                    <constraint firstAttribute="height" constant="30" id="bZo-i0-zBX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
@@ -160,30 +159,29 @@ And, please kill the Tello app.</string>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="LKp-Yt-PcO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2j4-zM-jk6"/>
-                            <constraint firstItem="LPo-j0-dWV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Tj-FR-O8b"/>
                             <constraint firstAttribute="trailing" secondItem="4Dv-Vk-jBp" secondAttribute="trailing" id="55N-1M-eUA"/>
-                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="top" secondItem="LPo-j0-dWV" secondAttribute="bottom" constant="35" id="55W-TX-fzj"/>
                             <constraint firstItem="24G-22-zs0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="676-yl-ZbM"/>
                             <constraint firstItem="aEx-MM-yEq" firstAttribute="top" secondItem="IMb-7v-o9n" secondAttribute="bottom" constant="10" id="79k-9O-9u7"/>
                             <constraint firstItem="4Dv-Vk-jBp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9Sb-SO-f9F"/>
                             <constraint firstItem="LKp-Yt-PcO" firstAttribute="top" secondItem="24G-22-zs0" secondAttribute="bottom" constant="5" id="FLf-XI-KJZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LKp-Yt-PcO" secondAttribute="bottom" constant="10" id="MPr-q6-Peg"/>
                             <constraint firstItem="c2R-kw-LZc" firstAttribute="top" secondItem="2Ts-gM-bOo" secondAttribute="bottom" constant="20" id="MQl-O1-p7S"/>
-                            <constraint firstItem="fXV-va-NSx" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="30" id="MVa-hi-FlI"/>
+                            <constraint firstItem="fXV-va-NSx" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="20" id="MVa-hi-FlI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ePg-cg-Ufn" secondAttribute="trailing" constant="10" id="N27-Kd-he0"/>
-                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nmp-Bj-NDi"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Q03-bS-Gy2"/>
                             <constraint firstItem="c2R-kw-LZc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R23-S2-ECL"/>
+                            <constraint firstItem="LPo-j0-dWV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ucj-LS-PtH"/>
                             <constraint firstItem="pd1-RS-63x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uyo-u4-L0L"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WX8-5u-tu5"/>
                             <constraint firstItem="aEx-MM-yEq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bsV-gz-tDf"/>
                             <constraint firstItem="qcq-nn-yqr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dwO-3D-6fx"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fVg-gj-T3w"/>
                             <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="foJ-9j-Bm8"/>
+                            <constraint firstItem="LPo-j0-dWV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="j3f-iw-hbl"/>
                             <constraint firstItem="ePg-cg-Ufn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lIh-RD-6I4"/>
                             <constraint firstItem="fXV-va-NSx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ocF-vS-m7p"/>
                             <constraint firstItem="24G-22-zs0" firstAttribute="top" secondItem="qcq-nn-yqr" secondAttribute="bottom" constant="5" id="pvX-ox-70L"/>
-                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qfW-1x-PSd"/>
+                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="qfW-1x-PSd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2Ts-gM-bOo" secondAttribute="trailing" constant="16" id="r4c-nt-Ddn"/>
                             <constraint firstItem="pd1-RS-63x" firstAttribute="top" secondItem="c2R-kw-LZc" secondAttribute="bottom" constant="30" id="sit-PY-vgn"/>
                             <constraint firstItem="ePg-cg-Ufn" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="10" id="uPl-hC-4KL"/>
